@@ -48,7 +48,7 @@ class AppletGtk : public AppletGUI {
 	//  main
 	// ========================================================================	
 	void update (gboolean no_popup = false);
-	gint create (void);
+	gint create (gpointer callbackdata);
 	void show (std::string name = "dialog");
 	void tooltip_update (void);
 
